Fix invisible list style #559

--- a/source/css/_schemes/Muse/index.styl
+++ b/source/css/_schemes/Muse/index.styl
@@ -1,3 +1,5 @@
+ul li { list-style: disc; }
+
 @import "_logo.styl";
 @import "_menu.styl";
 @import "_search.styl";
