--- a/source/css/_schemes/Pisces/index.styl
+++ b/source/css/_schemes/Pisces/index.styl
@@ -1,4 +1,5 @@
 body { background: #f5f7f9; }
+ul li { list-style: disc; }
 
 @import "_full-image";
 @import "_layout";
